--- a/.github/workflows/daily_export.yml
+++ b/.github/workflows/daily_export.yml
@@ -2,8 +2,8 @@ name: Daily Export to S3
 
 on:
   schedule:
-    # Run daily at 10:00 AM UTC (adjust cron for your timezone, e.g. 15 10 * * * for 10 AM EST)
-    - cron: '0 10 * * *'
+    # # Run daily at 10:00 AM UTC (adjust cron for your timezone, e.g. 15 10 * * * for 10 AM EST)
+    - cron: '20 19 * * *'
 
 env:
   CLICKHOUSE_HOST: ${{ secrets.CLICKHOUSE_HOST }}
