Update cron schedule for daily export workflow

--- a/.github/workflows/daily_export.yml
+++ b/.github/workflows/daily_export.yml
@@ -2,7 +2,7 @@ name: Daily Export to S3
 
 on:
   schedule:
-    # # Run daily at 10:00 AM UTC (adjust cron for your timezone, e.g. 15 10 * * * for 10 AM EST)
+    # # # Runs daily at 1:20 PM CST (19:20 UTC)
     - cron: '20 19 * * *'
 
 env:
